# Davi_Vargas

Davi_Vargas/Tarefa_3/: .project  CMakeLists.txt  README.md
Davi_Vargas/Tarefa_3/.cache/clangd/index/: bdc_motor.c.DBD7E6EB9FC80254.idx  bdc_motor.h.13B338D80E1A66B2.idx  bdc_motor_interface.h.45FB3D43CEB84721.idx  ir_line_task.h.6AD8EA3DE6D1699C.idx  pid_ctrl.c.3A41348650A8E35F.idx  pid_ctrl.h.AF89CF19DFC032BC.idx  robot_control.h.846E2F7E3568CDE3.idx  threeeyes.c.A441302A65ADA735.idx  threeeyes_task.h.0E64FC5DE971A920.idx  wheel.h.A0B23A2C9EF8415D.idx  wheel_task.h.F1FECDE125540CEB.idx
Davi_Vargas/Tarefa_3/main/: CMakeLists.txt  body_2wd.h  main.c  threeeyes.c  wheel.c
Davi_Vargas/Tarefa_3/main/test_tasks/: ir_line_task.c  ir_line_task.h  monitor_task.c  robot_control.c  threeeyes_task.h
Tarefa_3/: .cproject
Tarefa_3/.cache/clangd/index/: bdc_motor_mcpwm_impl.c.AE94AF528DCECEBE.idx  ir_line_task.c.12D102F84E0C1F30.idx  main.c.52C8991C2B35C343.idx  monitor_task.c.33D7B4F707C81013.idx  mpu6050.c.150520FDA24BE9D7.idx  mpu6050.h.92BC4775714B0EFA.idx  robot_control.c.94008B427F3E90AF.idx  threeeyes.h.9352F3FE6220B652.idx  threeeyes_task.c.8A9D90393E3E95DC.idx  wheel.c.8D9DD7CD7B4714B7.idx  wheel_task.c.48305AF8DA6ECBD2.idx
Tarefa_3/main/: body_2wd.c  mpu6050.c  mpu6050.h  threeeyes.h  wheel.h
Tarefa_3/main/test_tasks/: imu_task.c  imu_task.h  robot_control.h  threeeyes_task.c  wheel_task.c  wheel_task.h
